<resources>
    <string name="app_name">Pancs</string>
    <string name="username">Username</string>
    <string name="logo_login">Logo</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="curiosidades">Curiosidades</string>
    <string name="galeria">Galeria</string>
    <string name="por_favor_preencha_os_campos_a_seguir">Por favor, preencha os campos a seguir</string>
    <string name="nome_completo">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="img_voltar">voltar</string>
    <string name="forget_password_login">Forget Password</string>
</resources>